--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <body>
 
 <header>
-    <h1>Welcome to School Aubergine Academy</h1>
-    <p>Your future begins here at School Aubergine Academy.</p>
+    <h1>Welcome to Aubergine Academy</h1>
+    <p>Your future begins here at Aubergine Academy.</p>
 </header>
 
 <nav>
@@ -62,7 +62,7 @@
 
 <main>
     <section>
-        <h2>About RoSchool Aubergine Academy</h2>
+        <h2>About School Aubergine Academy</h2>
         <p>RoSchool Aubergine Academy is dedicated to providing a supportive and challenging environment where students can thrive and reach their full potential. With state-of-the-art facilities, experienced faculty, and a vibrant community, we are proud to foster excellence and innovation.</p>
     </section>
 
