--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </header>
 
 <nav>
-    <a href="/staff-portal.html">Staff Portal</a>
+    <a href="https://81qg30.mimo.run/index.html">Staff Portal</a>
     <a href="/student-portal.html">Student Portal</a>
     <a href="/expulsion-appeal.html">Expulsion Appeal</a>
     <a href="/become-student.html">Become a Student</a>
