--- a/student-portal.html
+++ b/student-portal.html
@@ -55,10 +55,7 @@
 </header>
 
 <nav>
-    <a href="https://81qg30.mimo.run/index.html">Staff Portal</a>
-    <a href="/student-portal.html">Student Portal</a>
-    <a href="/expulsion-appeal.html">Expulsion Appeal</a>
-    <a href="/become-student.html">Become a Student</a>
+    <a href="/index.html">Home</a>
 </nav>
 
 <main>
