--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 <nav>
     <a href="https://81qg30.mimo.run/index.html">Staff Portal</a>
-    <a href="/student-portal/">Student Portal</a>
-    <a href="/expulsion-appeal/">Expulsion Appeal</a>
-    <a href="/become-student/">Become a Student</a>
+    <a href="/AubergineAcademy/student-portal/">Student Portal</a>
+    <a href="/AubergineAcademy/expulsion-appeal/">Expulsion Appeal</a>
+    <a href="/AubergineAcademy/become-student/">Become a Student</a>
 </nav>
 
 <main>
