--- a/student-portal/index.html
+++ b/student-portal/index.html
@@ -50,7 +50,7 @@
 <body>
 
 <header>
-    <h1>Welcome to Aubergine Academy</h1>
+    <h1>Student Portal</h1>
     <p>Your future begins here at Aubergine Academy.</p>
 </header>
 
@@ -60,13 +60,13 @@
 
 <main>
     <section>
-        <h2>About School Aubergine Academy</h2>
-        <p>School Aubergine Academy is dedicated to providing a supportive and challenging environment where students can thrive and reach their full potential. With state-of-the-art facilities, experienced faculty, and a vibrant community, we are proud to foster excellence and innovation.</p>
+        <h2></h2>
+        <p></p>
     </section>
 
     <section>
-        <h2>Academics & Programs</h2>
-        <p>Our curriculum is designed to engage students with a blend of traditional subjects and hands-on experiences. From arts and sciences to technology and sports AND STEAMING, we offer a wide range of programs to inspire every learner.</p>
+        <h2></h2>
+        <p></p>
     </section>
 </main>
 
