--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 <main>
     <section>
-        <h2>About School Aubergine Academy</h2>
-        <p>School Aubergine Academy is dedicated to providing a supportive and challenging environment where students can thrive and reach their full potential. With state-of-the-art facilities, experienced faculty, and a vibrant community, we are proud to foster excellence and innovation.</p>
+        <h2>About Aubergine Academy</h2>
+        <p>Aubergine Academy is dedicated to providing a supportive and challenging environment where students can thrive and reach their full potential. With state-of-the-art facilities, experienced faculty, and a vibrant community, we are proud to foster excellence and innovation.</p>
     </section>
 
     <section>
